# la-di-cjastelan

./: .gitignore  README.md  pyproject.toml  relazione_integrazione.ipynb
app/: __init__.py  auth.py  corr.py  database.py  mercati.py  ocr.py
app/static/script/: cattura.js  corr.js  ocr.js
app/static/styles/: cattura.css  corrispettivi.css  error.css  index.css  login.css  mercati.css  ocr.css  style.css
app/templates/: base.html  cattura.html  error.html  index.html  login.html  mercati.html  ocr.html
app/templates/corr/: inserisci.html  success.html
instance/: config.py
